working but loading still not sharing all libs

--- a/packages/host/public/index.html
+++ b/packages/host/public/index.html
@@ -2,6 +2,8 @@
 
 <head>
 
+    <base href="/" />
+    
     <script src="https://unpkg.com/zone.js@0.10.3/dist/zone.js"></script>
 
     <meta http-equiv="Content-Security-Policy"
